--- a/ABCMoneyTransfer Project/Views/Account/Login.cshtml
+++ b/ABCMoneyTransfer Project/Views/Account/Login.cshtml
@@ -1,31 +1,32 @@
 ﻿@model ABCMoneyTransfer_Project.ViewModels.LoginViewModel
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h2 class="text-center">Login</h2>
-            <form asp-action="Login" method="post" class="needs-validation" novalidate>
-                <div class="form-group">
-                    <label asp-for="Email" class="form-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group mt-3">
-                    <label asp-for="Password" class="form-label"></label>
-                    <input asp-for="Password" type="password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-check mt-3">
-                    <input asp-for="RememberMe" class="form-check-input" type="checkbox" />
-                    <label asp-for="RememberMe" class="form-check-label"></label>
-                </div>
-                <div class="text-center mt-4">
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
-                </div>
-                <div class="text-center mt-3">
-                    <p>Don't have an account? <a href="/Account/Register">Register here</a>.</p>
-                </div>
-            </form>
-        </div>
+<h2>Login</h2>
+
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="text-danger">
+        @Html.ValidationSummary(excludePropertyErrors: true, message: "Please fix the errors below.")
     </div>
-</div>
+}
+
+<form asp-action="Login" method="post">
+    <div>
+        <label asp-for="Email"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Password"></label>
+        <input asp-for="Password" class="form-control" type="password" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div>
+        <input asp-for="RememberMe" type="checkbox" />
+        <label asp-for="RememberMe">Remember Me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
