--- a/ABCMoneyTransfer Project/Views/Transaction/Create.cshtml
+++ b/ABCMoneyTransfer Project/Views/Transaction/Create.cshtml
@@ -3,6 +3,14 @@
 <div class="container mt-4">
     <h2 class="text-center">Create Transaction</h2>
 
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="text-danger">
+            @Html.ValidationSummary(excludePropertyErrors: true, message: "Please fix the errors below.")
+        </div>
+    }
+
+
     <form asp-action="Create" method="post" class="mt-4">
         <div class="row">
 
